# valapractice2

./: meson.build
data/: com.github.bunnyapocalypse.valapractice2.appdata.xml  com.github.bunnyapocalypse.valapractice2.appdata.xml.in  com.github.bunnyapocalypse.valapractice2.desktop.in
po/: POTFILES  com.github.bunnyapocalypse.valapractice2.pot  de.po  es.po
src/: Application.vala
